# hush_transcribe_service

./: .dockerignore  .gitignore  .gitmodules  README.md  pyproject.toml  run.bat
.github/workflows/: code_linting.yaml
infra/: Dockerfile.cpu  Dockerfile.nvidia_cuda12  docker-compose.cpu.yaml  docker-compose.gpu.yaml
src/: main.py
src/diarization/: interfaces.py
src/diarization/implementations/: __init__.py
src/diarization/implementations/pyannote/: __init__.py  implementation.py
src/interval_storage/implementations/: __init__.py
src/interval_storage/implementations/intervaltree/: __init__.py  implementation.py
src/media/: exceptions.py  implementations.py  interfaces.py
src/media/implementations/: __init__.py
src/media/implementations/ffmpeg/: __init__.py  implementation.py
src/output/implementations/: __init__.py
src/output/implementations/csv_file_output/: __init__.py  implementation.py
src/settings/: settings.py
src/speech_recognition/diarization/: interfaces.py  resemblyzer_with_silero_vad_diarization_service.py
src/speech_recognition/interval_storage/: __init__.py  interfaces.py  intervaltree_storage_service.py
src/speech_recognition/media/: __init__.py  interfaces.py
src/speech_recognition/media/ffmpeg/: exceptions.py  ffmpeg_preparation_service.py
src/speech_recognition/output/: csv_file_output_service.py  full_output_pipeline.py  interfaces.py  txt_file_output_service.py  txt_file_simple_output_service.py
src/speech_recognition/pipeline/: interfaces.py  pipeline.py
src/speech_recognition/transcription/: __init__.py  faster_whisper_service.py  interfaces.py
src/telegram_integration/: progress_observer.py  telegram_integration.py
src/tests/media/: __init__.py  test_implementations.py
src/transcription/implementations/: __init__.py
src/transcription/implementations/fater_whisper/: __init__.py  implementation.py
tests/speech_recognition/diarization/: abstract_test.py  test_resemblyzer_with_silero_vad_diarization_service.py
tests/speech_recognition/interval_storage/: abstract_test.py  test_intervaltree_storage_service.py
