[project]
name = "hush-transcribe-service"
version = "0.1.0"
description = "Transcription and speaker diarization from audio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocsv>=1.4.0",
    "aiofiles>=25.1.0",
    "aiogram>=3.23.0",
    "faster-whisper>=1.1.1",
    "intervaltree>=3.1.0",
    "librosa>=0.11.0",
    "pydantic-settings>=2.12.0",
    "resemblyzer>=0.1.4",
    "silero-vad>=6.2.0",
    "typed-ffmpeg>=2.7.3",
]

[dependency-groups]
dev = ["bandit>=1.9.2", "pyright>=1.1.400", "pytest>=8.3.5", "ruff>=0.11.7"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D104", "D100", "D101", "D203", "D213", "D102"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"tests/*.py" = ["S101"]

[tool.pyright]
strict = ['src']

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
